--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -55,7 +55,8 @@
 	
 	\begin{enumerate}
 		\item Analyze expressive power of our conditional action with our restrictions.
-		\item We have found candidates might automatically solve the problem of disjunctive precondition. However further research is required, as it changes our model for proving preconditions.
+		\item Research efficient models for permutations solving the problem of storing atoms and connecting paths.
+		\item Solve the problem of isomorphic subgraphs in our proposed hypergraph merging algorithm.
 	\end{enumerate}
 	
 
