--- a/Learning/Algorithm.tex
+++ b/Learning/Algorithm.tex
@@ -8,7 +8,7 @@ In the following, we consider a general algorithm for learning in a virtual worl
     \item Collect existing knowledge about the question
     \item Form a hypothesis answering the question
     \item Conduct an experiment serving to prove or disprove the hypothesis
-    \item Analyse the results of the experiment and update the knowledge base accordingly.
+    \item Analyze the results of the experiment and update the knowledge base accordingly.
     \item Repeat from step 2, taking into account the newly obtained knowledge
 \end{enumerate}
 
