--- a/NonConditional/HypothesisConstruction.tex
+++ b/NonConditional/HypothesisConstruction.tex
@@ -146,7 +146,7 @@ Therefore in conclusion this action schema hypothesis would be mostly \texttt{Ex
 
 	We propose that preconditions are instead constructed based on the collected knowledge.
 	The set of candidate sets $\cset$ contain information about single instances of precondition combinations that has been shown to give a failure;
-	thus by converting them to CNF in the action schema, we guarantee that states which contain those specific predicate combination cannot have the action applied to it.
+	thus by converting them to CNF in the action schema, we guarantee that states which contain those specific literal combination cannot have the action applied to it.
 	Furthermore, we have the set $\Pro_P$ that contain the proven preconditions, as such combining the two we get:
 
 	\begin{equation} \label{eq:nca:opt-preconds}
