--- a/NonConditional/Preconditions.tex
+++ b/NonConditional/Preconditions.tex
@@ -11,7 +11,7 @@
 
 We will now consider the problem of learning the preconditions of an action schema $A$.
 
-In~\cite{Walsh2008}, the authors suggest maintaining a set of all possible conjunctions of $k$ or less predicates (where $k$ is the maximal number of predicates allowed in action schema preconditions), and --- on action failure --- marking the conjunctions predicting that the action would have succeeded as disproven.
+In~\cite{Walsh2008}, the authors suggest maintaining a set of all possible conjunctions of $k$ or less atoms (where $k$ is the maximal number of atoms allowed in action schema preconditions), and --- on action failure --- marking the conjunctions predicting that the action would have succeeded as disproven.
 
 We propose a solution where individual atoms are proven and disproven to be preconditions based on the following observations:
 \begin{itemize}
