--- a/Appendices/SokobanPDDL.tex
+++ b/Appendices/SokobanPDDL.tex
@@ -11,11 +11,11 @@
 We will now present a formalization of the sokoban world introduced in section \ref{sec:Algorithm} based on the PDDL specification presented in \cite{BS2011}.
 
 \subsubsection*{Problem specification}
-Any given sokoban problem, such as the one illustrated in figure \ref{fig:simpleSokoban}, contains a number of $crate$ objects (denoted $c_1, \dots, c_n$) as well as a number of $tile$ objects (denoted $t_1, \dots, t_k$). To describe how the tiles are interconnected, we introduce the predicates $hAdj(t_1,t_2)$ and $vAdj(t_1,t_3)$, respectively denoting that tile $t_1$ is horizontally adjacent to tile $t_2$ and vertically adjacent to $t_3$. It is clear that these relations are symmetric; if $t_i$ is vertically adjacent to $t_j$, then $t_j$ is also vertically adjacent to $t_i$ (similarly for horizontal adjacency). In the framework presented above, there is no machinery for aximoatic reasoning, hence this symmetry must be manually encoded by the problem designer by --- in the above example --- adding the predicates $hAdj(t_2,t_1)$ and $vAdj(t_3,t_1)$.
+Any given sokoban problem, such as the one illustrated in figure \ref{fig:simpleSokoban}, contains a number of $crate$ objects (denoted $c_1, \dots, c_n$) as well as a number of $tile$ objects (denoted $t_1, \dots, t_k$). To describe how the tiles are interconnected, we introduce the atoms $hAdj(t_1,t_2)$ and $vAdj(t_1,t_3)$, respectively denoting that tile $t_1$ is horizontally adjacent to tile $t_2$ and vertically adjacent to $t_3$. It is clear that these relations are symmetric; if $t_i$ is vertically adjacent to $t_j$, then $t_j$ is also vertically adjacent to $t_i$ (similarly for horizontal adjacency). In the framework presented above, there is no machinery for aximoatic reasoning, hence this symmetry must be manually encoded by the problem designer by --- in the above example --- adding the atom $hAdj(t_2,t_1)$ and $vAdj(t_3,t_1)$.
 
-Locations of the crates can be encoded with the predicate $at(c, t)$, denoting that crate $c$ is on tile $t$. Locations of goal tiles and the sokoban are represented with the predicates $goal(t)$ and $sokobanAt(t)$, respectively.
+Locations of the crates can be encoded with the atom $at(c, t)$, denoting that crate $c$ is on tile $t$. Locations of goal tiles and the sokoban are represented with the atoms $goal(t)$ and $sokobanAt(t)$, respectively.
 
-The initial state of a problem can now be represented by a conjunction of the these predicates. The state illustrated in figure \ref{fig:simpleSokoban} can be encoded by the formula in \eqref{eq:simpleSokoSpec}. The \textit{goal} of any sokoban problem is that each crate is positioned at a goal tile, denoted by the conjunction $atGoal(c_1) \land atGoal(c_2) \land \cdots \land atGoal(c_n)$.
+The initial state of a problem can now be represented by a conjunction of the these atoms. The state illustrated in figure \ref{fig:simpleSokoban} can be encoded by the formula in \eqref{eq:simpleSokoSpec}. The \textit{goal} of any sokoban problem is that each crate is positioned at a goal tile, denoted by the conjunction $atGoal(c_1) \land atGoal(c_2) \land \cdots \land atGoal(c_n)$.
 
 \begin{gather}
 \begin{gathered} \label{eq:simpleSokoSpec}
@@ -35,7 +35,7 @@ The initial state of a problem can now be represented by a conjunction of the th
 \subsubsection*{Domain specification}
 When designing a virtual or physical robot capable of solving a sokoban puzzle, it would be sufficient to equip it with a $move$ action which, given a direction or an adjacent tile, would relocate the sokoban appropriately, displacing any crates in the way. However, as STRIPS-style action schemas can only contain a single effect, it does not allow an action to, for example, push a crate \textit{if}  it is on the tile the sokoban is moving to. Instead, this requires different actions, which are outlined below:
 
-The effect of a movement action from tile $t_1$ to tile $t_2$ is that the sokoban is no longer present at $t_1$, but appears on $t_2$. Since there are no notion of variables in STRIPS-style action specifications, both $t_1$ and $t_2$ are given as arguments to the action, so that it can be asserted whether the sokoban is actually located at $t_1$ and whether it is possible to relocate it to $t_2$. Since pushing a crate has a different effect, and must therefore be implemented as another action, the destination tile must be empty for the movement action to succeed. Since STRIPS-style action schemas do not allow existentially or universally quantified formulae, the $at$ predicate can not be used, and the $clear$ predicate is used instead.
+The effect of a movement action from tile $t_1$ to tile $t_2$ is that the sokoban is no longer present at $t_1$, but appears on $t_2$. Since there are no notion of free variables in STRIPS-style action specifications, both $t_1$ and $t_2$ are given as arguments to the action, so that it can be asserted whether the sokoban is actually located at $t_1$ and whether it is possible to relocate it to $t_2$. Since pushing a crate has a different effect, and must therefore be implemented as another action, the destination tile must be empty for the movement action to succeed. Since STRIPS-style action schemas do not allow existentially or universally quantified formulae, the $at$ predicate can not be used, and the $clear$ predicate is used instead.
 
 As per the sokoban rules, movement from $t_1$ to $t_2$ is allowed only if the two tiles are either horizontally \textit{or} vertically adjacent. As preconditions can not contain disjunctions, and there can only be one precondition per action schema, two schemas are required for movement: One (\textit{move-h}) containing the precondition $hAdj(t_1,t_2)$ and the other (\textit{move-v}) the precondition $vAdj(t_1, t_2)$.
 In \eqref{act:moveh} the \textit{move-h} action is listed. The \textit{move-v} action is similar, except for having $vAdj$ as a precondition instead of $hAdj$.
@@ -101,11 +101,11 @@ We will now present a formalization of the Sokoban domain using conditional effe
 
 Initially, observe that the domain and problem specifications from the non-conditional Sokoban domain can not readily be reused under these restrictions. The reason for this is that each action in the Sokoban domain only adds or removes one set of relations to or from a state, as opposed to a set of relations for several applicable objects (the $push$ action only moves one crate, $move$ only moves the sokoban one tile, etc.). Therefore the conditionals must be designed in such a way that their effects are applied at most once per action invocation.
 
-For example, the adjacency relations carry no information about direction, i.e.\ whether one tile is to the left or right of another, but only that they are adjacent. This poses a problem when effects can only be described in terms of universally quantified predicates, as this could for example make the sokoban move to two horizontally adjacent, unoccupied tiles at once.
+For example, the adjacency relations carry no information about direction, i.e.\ whether one tile is to the left or right of another, but only that they are adjacent. This poses a problem when effects can only be described in terms of universally quantified atoms, as this could for example make the Sokoban move to two horizontally adjacent, unoccupied tiles at once.
 
 Instead, we require the adjacency relations in a problem specification to be antisymmetric, such that $hAdj\left( t_1, t_2\right)$ denotes the fact that $t_1$ is immediately left of $t_2$, and $hAdj\left( t_2, t_1\right)$ does not exist.
 
-The crates are no longer represented by separate objects; the fact that a tile $t$ has a box on it is now denoted $at(t)$. This also allows for removal of the $clear$ predicate, as that becomes equivalent to $\neg at(t)$. Additionally, the $atGoal$ and $goal$ predicates becomes redundant, as the goal of a Sokoban problem is that all goal tiles are covered by any crate, which can be exressed by the $at$ predicate.
+The crates are no longer represented by separate objects; the fact that a tile $t$ has a box on it is now denoted $at(t)$. This also allows for removal of the $clear$ predicate, as that becomes equivalent to $\neg at(t)$. Additionally, the $atGoal$ and $goal$ predicates becomes redundant, as the goal of a Sokoban problem is that all goal tiles are covered by any crate, which can be expressed by the $at$ predicate.
 
 As a consequence of the adjacency issue, each action must operate on a cardinal direction, rather than an axis, as was the case for non-conditional actions. As an example, the \textit{move-left} action is printed below:
 
@@ -127,7 +127,7 @@ As a consequence of the adjacency issue, each action must operate on a cardinal 
     \right]
 \end{align*}
 
-Here, the preconditions specify that tile $x$ (the destination) should be to the left of tile $y$ (the source). In the corresponding \textit{move-right} action, this precondition is replaced with $hAdj(y,x)$, denoting that the destination tile should be immediately right of the source. There are also \textit{move-up} and \textit{move-down} actions, with similar adjacency preconditions. As in the non-conditional domain, the $\neg at$ predicate precondition ensures that a \textit{push} action is selected instead of the destination contains a crate. Note that, as discussed above, the preconditions of the conditional in the $move$ action can only cause a single effect to occur.
+Here, the preconditions specify that tile $x$ (the destination) should be to the left of tile $y$ (the source). In the corresponding \textit{move-right} action, this precondition is replaced with $hAdj(y,x)$, denoting that the destination tile should be immediately right of the source. There are also \textit{move-up} and \textit{move-down} actions, with similar adjacency preconditions. As in the non-conditional domain, $\neg at(x)$ precondition ensures that a \textit{push} action is selected instead of the destination contains a crate. Note that, as discussed above, the preconditions of the conditional in the $move$ action can only cause a single effect to occur.
 
 As a last example, consider the \textit{push-left} action:
 
