--- a/Discussion.tex
+++ b/Discussion.tex
@@ -14,6 +14,8 @@ To be able to map an effect atom to a conditional, we require that the effects o
 This restriction requires that the effect of a conditional must in some way be transitively related to the objects used to determine whether it should occur. As explained in Section~\ref{chp:ca}, this is vital for describing preconditions as connected paths. However, certain domains are not constructible under this restriction. 
 
 
+In conclusion, lifting the restrictions we have imposed would allow for easier representations of domains with fewer action schemas. 
+
 \section{Space complexity of non-condition action learning algorithm}
 \subfile{Discussion/SpaceComplexity}
 
