--- a/Master.tex
+++ b/Master.tex
@@ -200,12 +200,12 @@
 \pagenumbering{roman}     
 \chapter{Abstract}
  
-Action schema learning is important as it is the first step for the construction of an A.I. based on only logical reasoning. 
+Action schema learning is important as it is the first step for the construction of an AI (atificial intelligence) based on only logical reasoning. 
 
-This thesis deals with action schema learning through deductive reasoning methods.
-The purpose of this thesis is show how we may approach Artificial Intelligence learning from non-probabilistic point of view. 
+This thesis deals with action schema learning through deductive reasoning.
+The purpose of this thesis is to show how we may approach action learning from a non-probabilistic point of view. 
 We accomplish this using established mathematical models, such as graphs and sets. 
-What the thesis provides is algorithms, mathematical formulas/models for learning STRIPS-style action schema, and gives an insight on how to apply those ideas in conditional-effect action schema learning.
+What the thesis provides is algorithms, mathematical formulas/models for learning STRIPS-style action schema, and gives an insight on how action schemas with conditional effects can be learned.
 
 
 
