--- a/Introduction.tex
+++ b/Introduction.tex
@@ -21,9 +21,9 @@
 	The \cite{Walsh2008} paper provides two algorithms that shows how to inductively learn action schemas which define a planning domain. 
 	Each algorithm describes a unique strategy for an agent to learn based on. 
 	
-	The first which they dub optimistic, is an approach where the agent always assumes it capable of more than it has seen it is. This makes it so, initially when the agent has no knowledge of anything it is quickly able to find plan, now that plan will almost always quickly fail however just by trying to perform the plan the agent is able to learn something new which it can use next time it tries to find a plan. Thus through trail and error the agent is slowly able to learn the domain.
+	The first which they dub optimistic, is an approach where the agent always assumes it capable of more than it has seen it is. This makes it so, initially when the agent has no knowledge of anything it is quickly able to find plan, now that plan will almost always quickly fail however just by trying to perform the plan the agent is able to learn something new which it can use next time it tries to find a plan. Thus through trial and error the agent is slowly able to learn the domain.
 	
-	The second algorithm in stark contrast to the first is called pessimistic, this algorithm is based around making the agent assume it is capable of nothing unless proven otherwise. This means the agent must rely on a teacher to explain how goals are solved, and instead the task for agent is how to understand the directions given from an outside source such as a teacher.
+	The second algorithm in stark contrast to the first is called pessimistic, this algorithm is based around making the agent assume it is capable of nothing unless proven otherwise. This means the agent must rely on a teacher to explain how goals are solved, and instead the task for the agent is how to understand the directions given from an outside source such as a teacher.
 	
 	This paper and these two approaches we use as a point of reference for us to explore the subject.  The paper deals exclusively with set-theoretic planning actions, in a STRIPS-style domain, where they have excluded disjunctive preconditions and negative preconditions. 
 	We seek to expand upon this showing how learning of negative precondition learning can be achieved. Furthermore, we will also show how conditional action learning may be achieved. By conditional actions we mean actions that include effects that sometime occur dependent on the state the action is applied in.
@@ -58,22 +58,17 @@
  
  \begin{description}
  	\item[\nameref{sec:Learning}]
-	 	This chapter gives an simplified view of scientific learning, how strategies in learning and what differentiate them. It also provides definition of how we use PDDL in rest of the thesis and provides a sokoban model in PDDL.
-	 	Lastly this section also provides an algorithm for learning, and shows how it can be applied to a sokoban domain.
-	
+	 	This chapter gives an simplified view of scientific learning, how strategies in learning and what differentiate them.  
+	\item[\nameref{sec:Algorithm}]
+		This section provides an algorithm for learning, and shows how it can be applied to a PDDL action schema learning.
 	\item[\nameref{chp:nca}]
-		Shows how action schema learning can be achieved for actions that contain no conditional effects. It shows how to learn both the preconditions and the effects of such an action. Lastly it shows how different learning strategies can be used when constructing the action schema for the action.
+		Shows how STRIPs-style action schema learning can be achieved. It shows how to learn both the preconditions and the effects of such an action. Lastly it shows how different learning strategies can be used when constructing the action schema for the action.
 		
 	\item[\nameref{chp:ca}]
-		This chapter provides a detailed description of the problems when attempting to learn conditional effects, and provides several different models that improves understanding of the problem. Especially we would like to highlight our Hypergraph model as it provides a mathematical framework for efficient and explicit description of the problem of conditonal effects .
+		This chapter provides a detailed description of the problems when attempting to learn conditional effects, and provides several different models that improves understanding of the problem. Especially we would like to highlight our optimized Hypergraph model as it provides a mathematical framework for efficient and explicit description of the problem of conditonal effects .
 	
 	\item[\nameref{chp:imp}]
-		Provides a description of what we have designed and what we used for our results, it also explains some of efficiencies we added to improve the runtime of the problem.
-	
-	\item[\nameref{chp:res}]
-		
-	
-	\item[\nameref{chp:dis}]
+		Shows the results from our simulation runs, and provides a detailed description of what we have design.
  
 \end{description}
 	
