--- a/Introduction.tex
+++ b/Introduction.tex
@@ -36,19 +36,19 @@
 	Throughout this thesis we will solve many different issues pertaining to all sort of different aspects of learning,
 	the following list will give an overview of what we have looked into and discussed:
 	\begin{description}
-		\item[Negative\; Preconditions] 
+		\item[Negative Preconditions] 
 		By define a new approach to learning and understanding preconditions, we are able to handle positive as well as negative preconditions.
 		
-		\item[Negative\; Goals] 
+		\item[Negative Goals] 
 		One of the limitations of \cite{Walsh2008} optimistic algorithm was it is incapable of solving Negative goals, we have solved this issue by designing a new theoretical planner feature.
 		
-		\item[Generalized\; Learning\; algorithm] 
+		\item[Generalized Learning algorithm] 
 		We discuss how and algorithm that constitutes learning should be defined, and we formulate one based on the theory of scientific learning.
 		
-		\item[Preliminary\;Conditional\;Effect\;Learning]
+		\item[Preliminary Conditional Effect Learning]
 		The reason we say preliminary is because, while we have developed and define a very efficient model for describing conditional effects, and shown how it should be used. We have not been able to design an efficient merge algorithm between two of our models. And while we have identified the problem of merging, we have had insufficient time to fully explore it.
 		
-		\item[Tested \; the \; theory \; by \; implementing \; it]
+		\item[Tested the theory by implementing it]
 		As we eluded to with conditional actions we have not fully explored this problem, but we have explored the problem fully for non-conditional actions. For this reason we have chosen to design a fully working program for non-conditional actions. 
 		This program includes a sokoban environment  where an agent must learn what its action does, in order to solve a set of goals.
 		
