--- a/Discussion.tex
+++ b/Discussion.tex
@@ -25,7 +25,7 @@ In conclusion, lifting the restrictions we have imposed would allow for easier r
 
 \section{Missing: Thoughts on Simulation}
 
-\section{Discussion of Results}
+\section{Discussion of Results}\label{sec:disc:results}
    \subfile{Discussion/DiscussionOfResults}
 %
 %\section{Planning}\label{sec:disc:planning}
