--- a/Implementation/ImplOverview.tex
+++ b/Implementation/ImplOverview.tex
@@ -19,6 +19,6 @@ Most of the algorithms and methods discussed in this thesis have been implemente
         The sokoban environment is provided as a ready-made world for the agent to act in. This implementation is based on the actions in Section~\ref{sec:SokobanPDDL}, i.e.\ it only supports non-conditional actions. When this environment is used, and the program is run in the console, a visual representation of the state of the world is displayed after each experiment.
 \end{description}
 
-While several of the algorithms and methods from Chapter~\ref{chp:ca} have been implemented in the program, hyper graph collapsing and hypothesis construction have not, which is why the implemented program can not learn conditional action schemas.
+While several of the algorithms and methods from Chapter~\ref{chp:ca} have been implemented in the program, hyper graph collapsing and conditional hypothesis construction have not, which is why the implemented program can not learn conditional action schemas.
 
 \end{document}
