--- a/Implementation/Results.tex
+++ b/Implementation/Results.tex
@@ -44,7 +44,7 @@ The generated plots for the \texttt{move-*} actions are presented in Figures~\re
 
 As can be seen in~\figref{fig:res:ekmoveh}, the agent will execute arbitrary \texttt{move-h} actions, untill it finds a valid one after 20 trials. When that happens, it immediately proves its two positive and negative effects, and disproved all others. In~\figref{fig:res:pkmoveh}, it can be seen that it builds up the set of candidates for each failing action application. Upon action success in step 21, it is able to disprove many positive preconditions and some negative ones, which in turn reduces two candidate sets to singletons, thus proving them.
 
-This pattern is very similar for the \texttt{move-v} action (see Figures~\ref{fig:res:ekmovev} and~\ref{fig:res:pkmovev}), except that its proves are delayed; in the first training problem, this action is never applicable, but that is unknown to the agent. It will attempt to apply the \texttt{move-v} action, and only succeed in finding cadidates. These candidates are not reduced untill the action succeeds in the second training problem. However, once the agent starts solving the second problem, the \texttt{move-v} action only requires three failed trials before success, as the condidates are used to limit the applicability of the action.
+This pattern is very similar for the \texttt{move-v} action (see Figures~\ref{fig:res:ekmovev} and~\ref{fig:res:pkmovev}), except that its successful actions are delayed; in the first training problem, this action is never applicable, but that is unknown to the agent. It will attempt to apply the \texttt{move-v} action, and only succeed in finding cadidates. These candidates are not reduced until the action succeeds in the second training problem. However, once the agent starts solving the second problem, the \texttt{move-v} action only requires three failed trials before success, as the condidates are used to limit the applicability of the action.
 
 \begin{figure}
     \centering
