--- a/Master.tex
+++ b/Master.tex
@@ -267,6 +267,7 @@ What the thesis provides is algorithms, mathematical formulas/models for learnin
     \subfile{Appendices/PDDL}
 \chapter{Conditional learning with hypergraphs}\label{sec:app:hypergraph}
     \subfile{Appendices/Hypergraph}
+    %By conditional actions we mean actions that include effects that sometime occur dependent on the state the action is applied in.
 \chapter{Results}\label{sec:app:results}
     \subfile{Appendices/Results}
 %-----------
